# cacos

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  cacos.toml  conanfile.txt  langs.toml
cmake/: DownloadGoogleTest.cmake  Sanitizers.cmake
config/: cacos.toml  langs.toml  task.toml
include/cacos/: cacos.h  common_args.h  config.h  language.h  options.h
include/cacos/commands/: config.h  init.h
include/cacos/config/: config.h  default.h
include/cacos/ejudge/: diff.h  opts.h  parser.h  session.h  solution.h  status.h  task.h
include/cacos/ejudge/html/: myhtml.h  parser.h  printer.h
include/cacos/ejudge/http/: client.h
include/cacos/ejudge/parser/: parser.h  task.h
include/cacos/executable/: executable.h  flags.h
include/cacos/executor/: executor.h
include/cacos/lang/: compiler.h  interpreter.h  lang.h  linker.h  opts.h  translator.h
include/cacos/process/: info.h  limits.h  process.h  result.h
include/cacos/task/: opts.h
include/cacos/test/: generate.h  test.h
include/cacos/test/add/: add.h
include/cacos/test/generate/: generator.h
include/cacos/test/run/: run.h
include/cacos/test/suite/: suite.h  test.h
include/cacos/util/: inline_variables.h  ints.h  logger.h  map.h  optional_ref.h  progress_bar.h  ranges.h  split.h  string.h  temp_directory.h  util.h
include/cacos/util/diff/: unified.h
include/cacos/util/mt/: fixed_queue.h
include/cacos/util/terminfo/: terminfo.h
include/cacos/version/: git.h  id.h  version.h
src/: cacos.cpp  common_args.cpp  config.cpp  init.cpp  language.cpp  main.cpp  options.cpp  test.cpp
src/commands/: config.cpp  config.cpp.autosave  init.cpp
src/config/: config.cpp  default.cpp.in
src/ejudge/: diff.cpp  parser.cpp  session.cpp  solution.cpp  status.cpp  task.cpp
src/ejudge/html/: myhtml.cpp  printer.cpp
src/ejudge/http/: client.cpp
src/ejudge/parser/: parser.cpp
src/executable/: executable.cpp  executable.cpp.autosave  flags.cpp
src/lang/: compiler.cpp  interpreter.cpp  lang.cpp  linker.cpp  translator.cpp
src/process/: process.cpp  result.cpp
src/process/unix/: info.cpp  process.cpp
src/process/windows/: info.cpp
src/task/: opts.cpp
src/test/: add.cpp  generate.cpp  test.cpp
src/test/add/: add.cpp
src/test/generate/: generate.cpp  generator.cpp
src/test/run/: run.cpp
src/test/suite/: suite.cpp  test.cpp
src/util/: inline_variables.cpp  logger.cpp  map.cpp  optional_ref.cpp  split.cpp  string.cpp  temp_directory.cpp
src/util/diff/: unified.cpp
src/util/mt/: fixed_queue.cpp
src/util/terminfo/: default.cpp  posix.cpp  windows.cpp
src/version/: git.cpp.in  id.cpp.in  version.cpp
test/: CMakeLists.txt  inline_variables.cpp
test/unit/: CMakeLists.txt  inline_variables.cpp  split.cpp
